flicker fix

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -235,7 +235,7 @@ a.sidebar-nav-item:focus {
   background-color: #505050;
 }
 
-@media (min-width: 30rem) {
+@media (min-width: 30.1rem) {
   .sidebar-toggle {
     position: fixed;
     width: 2.25rem;
