--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -52,11 +52,11 @@ html {
   font-size: 16px;
   line-height: 1.5;
 }
-@media (min-width: 38rem) {
+/*@media (min-width: 38rem) {
   html {
     font-size: 20px;
   }
-}
+}*/
 
 body {
   color: #515151;
